// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LOLocItems renders empty list 1`] = `
<div
  className="LocItems empty-loc"
>
  <img
    alt="empty loc"
    src="/assets/empty-loc.svg"
  />
  <p
    className="primary"
  >
    This LOC is empty.
  </p>
  <p
    className="secondary"
  >
    You can add public data and/or confidential documents.
  </p>
</div>
`;

exports[`LOLocItems renders with single draft item 1`] = `
<div
  className="LocItems"
>
  <div
    className="Table constrained-row-height"
  >
    <style>
      
            .Table .body .Row .Col.split-after::before {
                background-color: #152665;
            }
            
    </style>
    <div
      className="header"
      style={
        Object {
          "backgroundColor": "#0c163d",
          "color": "#ffffff",
        }
      }
    >
      <div
        className="Row"
      >
        <div
          className="Col"
          style={
            Object {
              "textAlign": "left",
              "width": "250px",
            }
          }
        >
          Public description
        </div>
        <div
          className="Col"
          style={
            Object {
              "textAlign": "center",
              "width": "200px",
            }
          }
        >
          Timestamp
        </div>
        <div
          className="Col"
          style={
            Object {
              "textAlign": "left",
              "width": "160px",
            }
          }
        >
          Type
        </div>
        <div
          className="Col"
          style={
            Object {
              "textAlign": "center",
              "width": "calc(( 100% - 1010px ) / 2)",
            }
          }
        >
          Submitted by
        </div>
        <div
          className="Col"
          style={
            Object {
              "textAlign": "center",
              "width": "calc(( 100% - 1010px ) / 2)",
            }
          }
        >
          Reviewed 
          <span
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <img
              alt="question"
              src="/assets/question.svg"
            />
          </span>
        </div>
        <div
          className="Col"
          style={
            Object {
              "textAlign": "center",
              "width": "400px",
            }
          }
        />
      </div>
    </div>
    <div
      className="body"
    >
      <div>
        <div
          className="Row has-details "
          style={
            Object {
              "color": "#ffffff",
            }
          }
        >
          <div
            className="Col has-details"
            style={
              Object {
                "backgroundColor": "#152665",
                "fontSize": undefined,
                "textAlign": "left",
                "width": "250px",
              }
            }
          >
            <div
              className="regular-cell overflowing"
              style={Object {}}
            >
              <span
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                Name
              </span>
            </div>
            <div
              className="ShowDetailsButton"
              onClick={[Function]}
            >
              <img
                alt="arrow-down"
                src="/assets/themes/light/arrow-down.svg"
              />
            </div>
          </div>
          <div
            className="Col"
            style={
              Object {
                "backgroundColor": "#152665",
                "fontSize": undefined,
                "textAlign": "center",
                "width": "200px",
              }
            }
          >
            <div
              className="regular-cell"
              style={
                Object {
                  "textAlign": "center",
                }
              }
            >
              -
            </div>
          </div>
          <div
            className="Col"
            style={
              Object {
                "backgroundColor": "#152665",
                "fontSize": undefined,
                "textAlign": "left",
                "width": "160px",
              }
            }
          >
            <div
              className="regular-cell"
              style={Object {}}
            >
              <span
                className="item-type"
              >
                Data
              </span>
               
            </div>
          </div>
          <div
            className="Col"
            style={
              Object {
                "backgroundColor": "#152665",
                "fontSize": undefined,
                "textAlign": "center",
                "width": "calc(( 100% - 1010px ) / 2)",
              }
            }
          >
            <div
              className="regular-cell"
              style={Object {}}
            >
              Patrick Gielen
            </div>
          </div>
          <div
            className="Col"
            style={
              Object {
                "backgroundColor": "#152665",
                "fontSize": undefined,
                "textAlign": "center",
                "width": "calc(( 100% - 1010px ) / 2)",
              }
            }
          >
            <div
              className="regular-cell"
              style={Object {}}
            >
              -
            </div>
          </div>
          <div
            className="Col"
            style={
              Object {
                "backgroundColor": "#152665",
                "fontSize": undefined,
                "textAlign": "center",
                "width": "400px",
              }
            }
          >
            <div
              className="ButtonGroup"
            >
              <div
                className="btn-group"
                role="group"
              >
                <button
                  className="Button btn btn-primary"
                  disabled={false}
                  onClick={[Function]}
                  style={Object {}}
                  type="button"
                >
                  Request review
                </button>
                <div
                  style={
                    Object {
                      "display": "none",
                    }
                  }
                >
                  <button
                    className="Button btn btn-polkadot"
                    disabled={false}
                    onClick={[Function]}
                    style={
                      Object {
                        "backgroundColor": "#e6007a",
                        "color": "white",
                      }
                    }
                    type="button"
                  >
                    <img
                      alt="publish"
                      height="20px"
                      src="/assets/publish.svg"
                    />
                     Publish
                  </button>
                </div>
                <button
                  className="Button btn btn-danger-flat"
                  data-testid="remove-Data-Name"
                  disabled={false}
                  onClick={[Function]}
                  style={Object {}}
                  type="button"
                >
                  <img
                    alt="trash"
                    src="/assets/trash.svg"
                  />
                </button>
                <div
                  style={
                    Object {
                      "display": "none",
                    }
                  }
                >
                  <button
                    className="Button btn btn-polkadot"
                    disabled={false}
                    onClick={[Function]}
                    style={
                      Object {
                        "backgroundColor": "#e6007a",
                        "color": "white",
                      }
                    }
                    type="button"
                  >
                    <img
                      alt="shield"
                      src="/assets/shield.svg"
                    />
                     Acknowledge
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="Row details"
          style={
            Object {
              "backgroundColor": "#152665",
              "color": "#ffffff",
            }
          }
        >
          <div
            className="Col LocItemDetails"
            style={
              Object {
                "width": "100%",
              }
            }
          >
            <div
              className="frame"
            >
              <div
                className="frame-title"
              >
                Data to be published
              </div>
              <div
                className="Row LocItemDetail"
              >
                <div
                  className="Col label"
                >
                  Public name
                  : 
                </div>
                <div
                  className="Col value-container"
                >
                  <span
                    className="value"
                  >
                    Name
                  </span>
                </div>
                <div
                  className="Col copy-paste-container"
                />
              </div>
              <div
                className="Row LocItemDetail"
              >
                <div
                  className="Col label"
                >
                  Submitter ID
                  : 
                </div>
                <div
                  className="Col value-container"
                >
                  <span
                    className="value"
                  >
                    5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY
                  </span>
                </div>
                <div
                  className="Col copy-paste-container"
                >
                  <button
                    className="Button CopyPasteButton small btn btn-primary"
                    disabled={false}
                    onClick={[Function]}
                    style={Object {}}
                    type="button"
                  >
                    <img
                      alt="copy_paste"
                      src="/assets/copy_paste.svg"
                    />
                  </button>
                </div>
              </div>
              <div
                className="Row LocItemDetail"
              >
                <div
                  className="Col label"
                >
                  Public data
                  : 
                </div>
                <div
                  className="Col value-container"
                >
                  <span
                    className="value"
                  >
                    <pre>
                      Value
                    </pre>
                  </span>
                </div>
                <div
                  className="Col copy-paste-container"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserLocItems renders empty list 1`] = `
<div
  className="LocItems empty-loc"
>
  <img
    alt="empty loc"
    src="/assets/empty-loc.svg"
  />
  <p
    className="primary"
  >
    This LOC is empty.
  </p>
  <p
    className="secondary"
  >
    You can add public data and/or confidential documents.
  </p>
</div>
`;

exports[`UserLocItems renders with single draft item 1`] = `
<div
  className="LocItems"
>
  <div
    className="Table constrained-row-height"
  >
    <style>
      
            .Table .body .Row .Col.split-after::before {
                background-color: #152665;
            }
            
    </style>
    <div
      className="header"
      style={
        Object {
          "backgroundColor": "#0c163d",
          "color": "#ffffff",
        }
      }
    >
      <div
        className="Row"
      >
        <div
          className="Col"
          style={
            Object {
              "textAlign": "left",
              "width": "250px",
            }
          }
        >
          Public description
        </div>
        <div
          className="Col"
          style={
            Object {
              "textAlign": "center",
              "width": "200px",
            }
          }
        >
          Timestamp
        </div>
        <div
          className="Col"
          style={
            Object {
              "textAlign": "left",
              "width": "160px",
            }
          }
        >
          Type
        </div>
        <div
          className="Col"
          style={
            Object {
              "textAlign": "center",
              "width": "calc(( 100% - 1010px ) / 2)",
            }
          }
        >
          Submitted by
        </div>
        <div
          className="Col"
          style={
            Object {
              "textAlign": "center",
              "width": "calc(( 100% - 1010px ) / 2)",
            }
          }
        >
          Reviewed 
          <span
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <img
              alt="question"
              src="/assets/question.svg"
            />
          </span>
        </div>
        <div
          className="Col"
          style={
            Object {
              "textAlign": "center",
              "width": "400px",
            }
          }
        />
      </div>
    </div>
    <div
      className="body"
    >
      <div>
        <div
          className="Row has-details "
          style={
            Object {
              "color": "#ffffff",
            }
          }
        >
          <div
            className="Col has-details"
            style={
              Object {
                "backgroundColor": "#152665",
                "fontSize": undefined,
                "textAlign": "left",
                "width": "250px",
              }
            }
          >
            <div
              className="regular-cell overflowing"
              style={Object {}}
            >
              <span
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                Name
              </span>
            </div>
            <div
              className="ShowDetailsButton"
              onClick={[Function]}
            >
              <img
                alt="arrow-down"
                src="/assets/themes/light/arrow-down.svg"
              />
            </div>
          </div>
          <div
            className="Col"
            style={
              Object {
                "backgroundColor": "#152665",
                "fontSize": undefined,
                "textAlign": "center",
                "width": "200px",
              }
            }
          >
            <div
              className="regular-cell"
              style={
                Object {
                  "textAlign": "center",
                }
              }
            >
              -
            </div>
          </div>
          <div
            className="Col"
            style={
              Object {
                "backgroundColor": "#152665",
                "fontSize": undefined,
                "textAlign": "left",
                "width": "160px",
              }
            }
          >
            <div
              className="regular-cell"
              style={Object {}}
            >
              <span
                className="item-type"
              >
                Data
              </span>
               
            </div>
          </div>
          <div
            className="Col"
            style={
              Object {
                "backgroundColor": "#152665",
                "fontSize": undefined,
                "textAlign": "center",
                "width": "calc(( 100% - 1010px ) / 2)",
              }
            }
          >
            <div
              className="regular-cell"
              style={Object {}}
            >
              <div>
                5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW
              </div>
            </div>
          </div>
          <div
            className="Col"
            style={
              Object {
                "backgroundColor": "#152665",
                "fontSize": undefined,
                "textAlign": "center",
                "width": "calc(( 100% - 1010px ) / 2)",
              }
            }
          >
            <div
              className="regular-cell"
              style={Object {}}
            >
              -
            </div>
          </div>
          <div
            className="Col"
            style={
              Object {
                "backgroundColor": "#152665",
                "fontSize": undefined,
                "textAlign": "center",
                "width": "400px",
              }
            }
          >
            <div
              className="ButtonGroup"
            >
              <div
                className="btn-group"
                role="group"
              >
                <button
                  className="Button btn btn-primary"
                  disabled={false}
                  onClick={[Function]}
                  style={Object {}}
                  type="button"
                >
                  Request review
                </button>
                <div
                  style={
                    Object {
                      "display": "none",
                    }
                  }
                >
                  <button
                    className="Button btn btn-polkadot"
                    disabled={false}
                    onClick={[Function]}
                    style={
                      Object {
                        "backgroundColor": "#e6007a",
                        "color": "white",
                      }
                    }
                    type="button"
                  >
                    <img
                      alt="publish"
                      height="20px"
                      src="/assets/publish.svg"
                    />
                     Publish
                  </button>
                </div>
                <button
                  className="Button btn btn-danger-flat"
                  data-testid="remove-Data-Name"
                  disabled={false}
                  onClick={[Function]}
                  style={Object {}}
                  type="button"
                >
                  <img
                    alt="trash"
                    src="/assets/trash.svg"
                  />
                </button>
                <div
                  style={
                    Object {
                      "display": "none",
                    }
                  }
                >
                  <button
                    className="Button btn btn-polkadot"
                    disabled={false}
                    onClick={[Function]}
                    style={
                      Object {
                        "backgroundColor": "#e6007a",
                        "color": "white",
                      }
                    }
                    type="button"
                  >
                    <img
                      alt="shield"
                      src="/assets/shield.svg"
                    />
                     Acknowledge
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="Row details"
          style={
            Object {
              "backgroundColor": "#152665",
              "color": "#ffffff",
            }
          }
        >
          <div
            className="Col LocItemDetails"
            style={
              Object {
                "width": "100%",
              }
            }
          >
            <div
              className="frame"
            >
              <div
                className="frame-title"
              >
                Data to be published
              </div>
              <div
                className="Row LocItemDetail"
              >
                <div
                  className="Col label"
                >
                  Public name
                  : 
                </div>
                <div
                  className="Col value-container"
                >
                  <span
                    className="value"
                  >
                    Name
                  </span>
                </div>
                <div
                  className="Col copy-paste-container"
                />
              </div>
              <div
                className="Row LocItemDetail"
              >
                <div
                  className="Col label"
                >
                  Submitter ID
                  : 
                </div>
                <div
                  className="Col value-container"
                >
                  <span
                    className="value"
                  >
                    5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW
                  </span>
                </div>
                <div
                  className="Col copy-paste-container"
                >
                  <button
                    className="Button CopyPasteButton small btn btn-primary"
                    disabled={false}
                    onClick={[Function]}
                    style={Object {}}
                    type="button"
                  >
                    <img
                      alt="copy_paste"
                      src="/assets/copy_paste.svg"
                    />
                  </button>
                </div>
              </div>
              <div
                className="Row LocItemDetail"
              >
                <div
                  className="Col label"
                >
                  Public data
                  : 
                </div>
                <div
                  className="Col value-container"
                >
                  <span
                    className="value"
                  >
                    <pre>
                      Value
                    </pre>
                  </span>
                </div>
                <div
                  className="Col copy-paste-container"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
